Update the package controller and model definition. Ensure t hat the OpenApi spec is written to the root directory
